# phamclust

./: .gitignore  CHANGES.rst  README.md  requirements.txt  setup.cfg
src/phamclust/: Genome.py  SymMatrix.py  __init__.py  __main__.py  blastn.py  cli.py  clustering.py  fasta.py  genome.py  heatmap.py  matrix.py  metrics.py  multiprocess.py  parallel_process.py  similarity.py  statistics.py
src/phamclust/scripts/: benchmark.py  nucclust.py  phamclust.py
