[metadata]
license_files = LICENSE
name = phamclust
version = 1.0.1
author = Christian Gauthier
author_email = chg60@pitt.edu
description = Cluster genomes based on gene phamily data
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/chg60/phamclust
project_urls =
    Source = https://github.com/chg60/phamclust
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:
install_requires =

[options.packages.find]
where = src
include = phamclust
exclude =

[options.entry_points]
console_scripts =
    phamclust = phamclust.__main__:main
